feat: сверстать категории

--- a/src/index.html
+++ b/src/index.html
@@ -26,9 +26,128 @@
             </li>
           </ul>
         </nav>
-        <button type="button" class="header__theme-switch"></button>
+        <button
+          type="button"
+          class="header__theme-switch"
+          title="светлая тема"
+        ></button>
       </header>
-      <main class="content"></main>
+      <main class="content">
+        <section class="shop">
+          <ul class="shop__categories">
+            <!-- PENS -->
+            <li class="shop__category">
+              <h2 class="category__header">Ручки</h2>
+              <ul class="category__container">
+                <li class="category__item">
+                  <img class="item__image" src="./images/pen_1.jpg" />
+                  <div class="item__bttm-panel">
+                    <div class="item__descr">
+                      <p class="item__name">
+                        Ручкааааааааааааааааааааааааааааааапппппппппппппппппппппппппппп
+                      </p>
+                      <p class="item__date">10.10.2010</p>
+                    </div>
+                    <button class="item__button">Купить</button>
+                  </div>
+                </li>
+                <li class="category__item">
+                  <img class="item__image" src="./images/pen_2.jpg" />
+                  <div class="item__bttm-panel">
+                    <div class="item__descr">
+                      <p class="item__name">Ручка</p>
+                      <p class="item__date">10.10.2010</p>
+                    </div>
+                    <button class="item__button">Купить</button>
+                  </div>
+                </li>
+                <li class="category__item">
+                  <img class="item__image" src="./images/pen_3.jpg" />
+                  <div class="item__bttm-panel">
+                    <div class="item__descr">
+                      <p class="item__name">Ручка</p>
+                      <p class="item__date">10.10.2010</p>
+                    </div>
+                    <button class="item__button">Купить</button>
+                  </div>
+                </li>
+                <li class="category__item">
+                  <img class="item__image" src="./images/pen_4.jpg" />
+                  <div class="item__bttm-panel">
+                    <div class="item__descr">
+                      <p class="item__name">Ручка</p>
+                      <p class="item__date">10.10.2010</p>
+                    </div>
+                    <button class="item__button">Купить</button>
+                  </div>
+                </li>
+                <li class="category__item">
+                  <img class="item__image" src="./images/pen_5.jpg" />
+                  <div class="item__bttm-panel">
+                    <div class="item__descr">
+                      <p class="item__name">Ручка</p>
+                      <p class="item__date">10.10.2010</p>
+                    </div>
+                    <button class="item__button">Купить</button>
+                  </div>
+                </li>
+                <li class="category__item">
+                  <img class="item__image" src="./images/pen_6.jpg" />
+                  <div class="item__bttm-panel">
+                    <div class="item__descr">
+                      <p class="item__name">Набор ручек</p>
+                      <p class="item__date">10.10.2010</p>
+                    </div>
+                    <button class="item__button">Купить</button>
+                  </div>
+                </li>
+              </ul>
+            </li>
+            <!-- PENCILS -->
+            <li class="shop__category">
+              <h2 class="category__header">Карандаши</h2>
+              <ul class="category__container">
+                <li class="category__item"></li>
+                <li class="category__item"></li>
+                <li class="category__item"></li>
+                <li class="category__item"></li>
+                <li class="category__item"></li>
+                <li class="category__item"></li>
+                <li class="category__item"></li>
+                <li class="category__item"></li>
+              </ul>
+            </li>
+            <!-- BACKPACKS -->
+            <li class="shop__category">
+              <h2 class="category__header">Рюкзаки</h2>
+              <ul class="category__container">
+                <li class="category__item"></li>
+                <li class="category__item"></li>
+                <li class="category__item"></li>
+                <li class="category__item"></li>
+                <li class="category__item"></li>
+                <li class="category__item"></li>
+                <li class="category__item"></li>
+                <li class="category__item"></li>
+              </ul>
+            </li>
+            <!-- BAGS -->
+            <li class="shop__category">
+              <h2 class="category__header">Сумки</h2>
+              <ul class="category__container">
+                <li class="category__item"></li>
+                <li class="category__item"></li>
+                <li class="category__item"></li>
+                <li class="category__item"></li>
+                <li class="category__item"></li>
+                <li class="category__item"></li>
+                <li class="category__item"></li>
+                <li class="category__item"></li>
+              </ul>
+            </li>
+          </ul>
+        </section>
+      </main>
     </div>
   </body>
 </html>
