feat: сверстать категории

--- a/src/index.html
+++ b/src/index.html
@@ -13,16 +13,16 @@
         <nav class="header__nav">
           <ul class="header__nav-list">
             <li class="header__nav-item">
-              <a class="header__nav-link" href="#">Ручки</a>
+              <a class="header__nav-link" href="#pens">Ручки</a>
             </li>
             <li class="header__nav-item">
-              <a class="header__nav-link" href="#">Карандаши</a>
+              <a class="header__nav-link" href="#pencils">Карандаши</a>
             </li>
             <li class="header__nav-item">
-              <a class="header__nav-link" href="#">Рюкзаки</a>
+              <a class="header__nav-link" href="#backpacks">Рюкзаки</a>
             </li>
             <li class="header__nav-item">
-              <a class="header__nav-link" href="#">Сумки</a>
+              <a class="header__nav-link" href="#bags">Сумки</a>
             </li>
           </ul>
         </nav>
@@ -37,7 +37,7 @@
           <ul class="shop__categories">
             <!-- PENS -->
             <li class="shop__category">
-              <h2 class="category__header">Ручки</h2>
+              <a class="category__header" name="pens">Ручки</a>
               <ul class="category__container">
                 <li class="category__item">
                   <img class="item__image" src="./images/pen_1.jpg" />
@@ -105,7 +105,7 @@
             </li>
             <!-- PENCILS -->
             <li class="shop__category">
-              <h2 class="category__header">Карандаши</h2>
+              <a class="category__header" name="pencils">Карандаши</a>
               <ul class="category__container">
                 <li class="category__item"></li>
                 <li class="category__item"></li>
@@ -119,7 +119,7 @@
             </li>
             <!-- BACKPACKS -->
             <li class="shop__category">
-              <h2 class="category__header">Рюкзаки</h2>
+              <a class="category__header" name="backpacks">Рюкзаки</a>
               <ul class="category__container">
                 <li class="category__item"></li>
                 <li class="category__item"></li>
@@ -133,7 +133,7 @@
             </li>
             <!-- BAGS -->
             <li class="shop__category">
-              <h2 class="category__header">Сумки</h2>
+              <a class="category__header" name="bags">Сумки</a>
               <ul class="category__container">
                 <li class="category__item"></li>
                 <li class="category__item"></li>
