feat: сверстать категории

--- a/src/index.html
+++ b/src/index.html
@@ -35,6 +35,128 @@
       <main class="content">
         <section class="shop">
           <ul class="shop__categories">
+            <!-- BACKPACKS -->
+            <li class="shop__category">
+              <a class="category__header" name="backpacks">Рюкзаки</a>
+              <ul class="category__container">
+                <li class="category__item">
+                  <img class="item__image" src="./images/backpack_1.jpg" />
+                  <div class="item__bttm-panel">
+                    <div class="item__descr">
+                      <p class="item__name">Рюкзак</p>
+                      <p class="item__date">10.10.2010</p>
+                    </div>
+                    <button class="item__button">Купить</button>
+                  </div>
+                </li>
+                <li class="category__item">
+                  <img class="item__image" src="./images/backpack_2.jpg" />
+                  <div class="item__bttm-panel">
+                    <div class="item__descr">
+                      <p class="item__name">Рюкзак</p>
+                      <p class="item__date">10.10.2010</p>
+                    </div>
+                    <button class="item__button">Купить</button>
+                  </div>
+                </li>
+                <li class="category__item">
+                  <img class="item__image" src="./images/backpack_3.jpg" />
+                  <div class="item__bttm-panel">
+                    <div class="item__descr">
+                      <p class="item__name">Рюкзак</p>
+                      <p class="item__date">10.10.2010</p>
+                    </div>
+                    <button class="item__button">Купить</button>
+                  </div>
+                </li>
+                <li class="category__item">
+                  <img class="item__image" src="./images/backpack_4.jpg" />
+                  <div class="item__bttm-panel">
+                    <div class="item__descr">
+                      <p class="item__name">Рюкзак</p>
+                      <p class="item__date">10.10.2010</p>
+                    </div>
+                    <button class="item__button">Купить</button>
+                  </div>
+                </li>
+                <li class="category__item">
+                  <img class="item__image" src="./images/backpack_5.jpg" />
+                  <div class="item__bttm-panel">
+                    <div class="item__descr">
+                      <p class="item__name">Рюкзак</p>
+                      <p class="item__date">10.10.2010</p>
+                    </div>
+                    <button class="item__button">Купить</button>
+                  </div>
+                </li>
+                <li class="category__item">
+                  <img class="item__image" src="./images/backpack_6.jpg" />
+                  <div class="item__bttm-panel">
+                    <div class="item__descr">
+                      <p class="item__name">Рюкзак</p>
+                      <p class="item__date">10.10.2010</p>
+                    </div>
+                    <button class="item__button">Купить</button>
+                  </div>
+                </li>
+              </ul>
+            </li>
+            <!-- BAGS -->
+            <li class="shop__category">
+              <a class="category__header" name="bags">Сумки</a>
+              <ul class="category__container">
+                <li class="category__item">
+                  <img class="item__image" src="./images/bag_1.jpg" />
+                  <div class="item__bttm-panel">
+                    <div class="item__descr">
+                      <p class="item__name">Сумка</p>
+                      <p class="item__date">10.10.2010</p>
+                    </div>
+                    <button class="item__button">Купить</button>
+                  </div>
+                </li>
+                <li class="category__item">
+                  <img class="item__image" src="./images/bag_2.jpg" />
+                  <div class="item__bttm-panel">
+                    <div class="item__descr">
+                      <p class="item__name">Сумка</p>
+                      <p class="item__date">10.10.2010</p>
+                    </div>
+                    <button class="item__button">Купить</button>
+                  </div>
+                </li>
+                <li class="category__item">
+                  <img class="item__image" src="./images/bag_3.jpg" />
+                  <div class="item__bttm-panel">
+                    <div class="item__descr">
+                      <p class="item__name">Сумка</p>
+                      <p class="item__date">10.10.2010</p>
+                    </div>
+                    <button class="item__button">Купить</button>
+                  </div>
+                </li>
+                <li class="category__item">
+                  <img class="item__image" src="./images/bag_4.jpg" />
+                  <div class="item__bttm-panel">
+                    <div class="item__descr">
+                      <p class="item__name">Сумка</p>
+                      <p class="item__date">10.10.2010</p>
+                    </div>
+                    <button class="item__button">Купить</button>
+                  </div>
+                </li>
+                <li class="category__item">
+                  <img class="item__image" src="./images/bag_5.jpg" />
+                  <div class="item__bttm-panel">
+                    <div class="item__descr">
+                      <p class="item__name">Сумка</p>
+                      <p class="item__date">10.10.2010</p>
+                    </div>
+                    <button class="item__button">Купить</button>
+                  </div>
+                </li>
+              </ul>
+            </li>
             <!-- PENS -->
             <li class="shop__category">
               <a class="category__header" name="pens">Ручки</a>
@@ -43,9 +165,7 @@
                   <img class="item__image" src="./images/pen_1.jpg" />
                   <div class="item__bttm-panel">
                     <div class="item__descr">
-                      <p class="item__name">
-                        Ручкааааааааааааааааааааааааааааааапппппппппппппппппппппппппппп
-                      </p>
+                      <p class="item__name">Ручка</p>
                       <p class="item__date">10.10.2010</p>
                     </div>
                     <button class="item__button">Купить</button>
@@ -107,42 +227,46 @@
             <li class="shop__category">
               <a class="category__header" name="pencils">Карандаши</a>
               <ul class="category__container">
-                <li class="category__item"></li>
-                <li class="category__item"></li>
-                <li class="category__item"></li>
-                <li class="category__item"></li>
-                <li class="category__item"></li>
-                <li class="category__item"></li>
-                <li class="category__item"></li>
-                <li class="category__item"></li>
-              </ul>
-            </li>
-            <!-- BACKPACKS -->
-            <li class="shop__category">
-              <a class="category__header" name="backpacks">Рюкзаки</a>
-              <ul class="category__container">
-                <li class="category__item"></li>
-                <li class="category__item"></li>
-                <li class="category__item"></li>
-                <li class="category__item"></li>
-                <li class="category__item"></li>
-                <li class="category__item"></li>
-                <li class="category__item"></li>
-                <li class="category__item"></li>
-              </ul>
-            </li>
-            <!-- BAGS -->
-            <li class="shop__category">
-              <a class="category__header" name="bags">Сумки</a>
-              <ul class="category__container">
-                <li class="category__item"></li>
-                <li class="category__item"></li>
-                <li class="category__item"></li>
-                <li class="category__item"></li>
-                <li class="category__item"></li>
-                <li class="category__item"></li>
-                <li class="category__item"></li>
-                <li class="category__item"></li>
+                <li class="category__item">
+                  <img class="item__image" src="./images/pencil_1.jpg" />
+                  <div class="item__bttm-panel">
+                    <div class="item__descr">
+                      <p class="item__name">Карандаш</p>
+                      <p class="item__date">10.10.2010</p>
+                    </div>
+                    <button class="item__button">Купить</button>
+                  </div>
+                </li>
+                <li class="category__item">
+                  <img class="item__image" src="./images/pencil_3.jpg" />
+                  <div class="item__bttm-panel">
+                    <div class="item__descr">
+                      <p class="item__name">Набор Карандашей</p>
+                      <p class="item__date">10.10.2010</p>
+                    </div>
+                    <button class="item__button">Купить</button>
+                  </div>
+                </li>
+                <li class="category__item">
+                  <img class="item__image" src="./images/pencil_5.jpg" />
+                  <div class="item__bttm-panel">
+                    <div class="item__descr">
+                      <p class="item__name">Набор Карандашей</p>
+                      <p class="item__date">10.10.2010</p>
+                    </div>
+                    <button class="item__button">Купить</button>
+                  </div>
+                </li>
+                <li class="category__item">
+                  <img class="item__image" src="./images/pencil_6.jpg" />
+                  <div class="item__bttm-panel">
+                    <div class="item__descr">
+                      <p class="item__name">Набор Карандашей</p>
+                      <p class="item__date">10.10.2010</p>
+                    </div>
+                    <button class="item__button">Купить</button>
+                  </div>
+                </li>
               </ul>
             </li>
           </ul>
