feat: настроить кнопку прокрутки наверх

--- a/src/index.html
+++ b/src/index.html
@@ -271,7 +271,9 @@
             </li>
           </ul>
         </section>
+        <button class="scroll-top-btn">&#129045;</button>
       </main>
     </div>
+    <script src="index.js"></script>
   </body>
 </html>
