feat: настроить работу формы

--- a/src/index.html
+++ b/src/index.html
@@ -298,6 +298,7 @@
                     id="color"
                     name="color"
                     type="radio"
+                    required
                   />
                   <input
                     class="buy-form__input buy-form__input_type_color color_white"
@@ -332,8 +333,12 @@
                 ></textarea>
               </div>
               <div class="buy-form__buttons">
-                <button class="buy-form__submit-button">Купить</button>
-                <button class="buy-form__close-button">Закрыть</button>
+                <button class="buy-form__submit-button" type="submit">
+                  Купить
+                </button>
+                <button class="buy-form__close-button" type="button">
+                  Закрыть
+                </button>
               </div>
             </form>
           </div>
