feat: настроить переключение между темами

--- a/src/index.html
+++ b/src/index.html
@@ -26,11 +26,11 @@
             </li>
           </ul>
         </nav>
-        <button
-          type="button"
+        <input
+          type="checkbox"
           class="header__theme-switch"
           title="светлая тема"
-        ></button>
+        />
       </header>
       <main class="content">
         <section class="shop">
