feat: сверстать блок со списком категорий

--- a/src/index.html
+++ b/src/index.html
@@ -13,16 +13,16 @@
         <nav class="header__nav">
           <ul class="header__nav-list">
             <li class="header__nav-item">
-              <a class="header__nav-link" href="#pens">Ручки</a>
-            </li>
-            <li class="header__nav-item">
-              <a class="header__nav-link" href="#pencils">Карандаши</a>
-            </li>
-            <li class="header__nav-item">
               <a class="header__nav-link" href="#backpacks">Рюкзаки</a>
             </li>
             <li class="header__nav-item">
               <a class="header__nav-link" href="#bags">Сумки</a>
+            </li>
+            <li class="header__nav-item">
+              <a class="header__nav-link" href="#pens">Ручки</a>
+            </li>
+            <li class="header__nav-item">
+              <a class="header__nav-link" href="#pencils">Карандаши</a>
             </li>
           </ul>
         </nav>
@@ -268,6 +268,23 @@
                   </div>
                 </li>
               </ul>
+            </li>
+          </ul>
+        </section>
+        <section class="categories">
+          <h2 class="categories__header">Категории товаров:</h2>
+          <ul class="categories__container">
+            <li class="categories__item">
+              <a class="categories__category" href="#backpacks">Рюкзаки</a>
+            </li>
+            <li class="categories__item">
+              <a class="categories__category" href="#bags">Сумки</a>
+            </li>
+            <li class="categories__item">
+              <a class="categories__category" href="#pens">Ручки</a>
+            </li>
+            <li class="categories__item">
+              <a class="categories__category" href="#pencils">Карандаши</a>
             </li>
           </ul>
         </section>
